--- a/site/styles.css
+++ b/site/styles.css
@@ -1,35 +1,41 @@
 
 
 body{
-  
+  width: 100%;
+  height: auto;
+ 
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
    text-align: center;
     
-
+padding-bottom: 40px;
     background-color: rgb(181, 181, 181);
+   
 }
-header{
-    max-width: 1000px;
 
-}
-  nav {
+  nav div {
     
-    align-items: center;
+    
     display: inline-flex;
-    text-decoration: none;
     justify-content: space-between;
-    padding: 10px;
+ align-items: center;
+ padding-right: 0px;
     }
-    nav div a{
+
+ a{
 text-decoration: none;
     }
-   nav h1 {
+   nav div h1 {
        font-size: 40px;
+       flex-direction: column;
 color: black;
 text-align: center;
 align-items: center;
+position: center;
+padding:30px;
+
    }
   
    nav div ul li{
@@ -37,21 +43,24 @@ align-items: center;
        padding: 10px;
    }
     h2{
-       font-size: 30px;
+       font-size: 200%;
        color: black;
-       display: flex;
+       display: inline;
+       align-items:center ;
+        padding: 10%;
        
    }
 /*******************************/
 
     .sect1{
         background-color:#D02828;
-       width: auto;
+        width: 100%;
+        height: 100%;
        max-width: 800px;
-        height:200px;
+     padding-right: 5px;
        justify-content: center;
        align-items: center;
-       padding: 30px;
+      display: grid;
       
     }
 
@@ -65,7 +74,7 @@ align-items: center;
    
     .sect1 > .boxPromocao > .titulo{
         width: 20%;
-        height: 90%;
+        height: 100%;
         display:flex;
         align-items: center;
         
@@ -94,7 +103,7 @@ align-items: center;
         width: 50%;
         height: 95%;
         align-items: center;
-        
+        background-color: cornsilk;
        }
        .lista li img{
        
@@ -105,66 +114,79 @@ align-items: center;
        }
 
      .itemCaixa1{
-      top:10px;
-        right: auto;
-         position: relative;
-         
+        
+  
+        align-items: center;
+        padding: 5px;
+ text-align: right;
+ 
      }
+    
    
-  .suporte div p {
-      align-items: center;
-      text-align: center;
-  }  
-           
+ 
+     /**********************************/      
   .sect2{
     background-color: rgb(181, 181, 181);
-   width: auto;
+   width: 100%;
+   
+   height: 250px;
    max-width: 800px;
-    height:400px;
+   
    justify-content: center;
    align-items: center;
-   padding: 30px;
-  
+ 
+   display: grid;
+   padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-.sect2 > .boxPromocao{
+.sect2 > .boxPromocao2{
   width: 100%;
-  height:100%;
+
+  height: 100%;
 display:grid;
 align-items: center;
+flex-direction: column;
+text-align: center;
+justify-content: center;
 
 }
 
-.sect2 > .boxPromocao > .titulo> h2{
+.sect2 > .boxPromocao2 > .titulo{
     width: 100%;
+  
     height: 100%;
     align-items: center;
-    text-align: center;
+  
     }
     
 
- .sect2 > .boxPromocao > .listaPromocao2{
+ .sect2 > .boxPromocao2 > .listaPromocao2{
     width: 100%;
-    height: 100%;
-    display: inline-flex;
+    
+      height: 100%;
+    display:flex;
     align-items: center;
+
         
         }
  
    .lista2 {
     width: 100%;
-    height: 50%;
+ 
+      height: 80%;
      display: inline-flex;
     list-style: none;
-    align-items: center;
-           
-           justify-content: space-between
+    align-items: center;          
+  
+    padding: 0px;
             }
    .lista2 li {
-    padding: 15px;
+    padding: 5px;
     width: 100%;
     height: 100%;
     align-items: center;
+    
     ;
     
    }
@@ -177,13 +199,20 @@ align-items: center;
    }
 
  .itemCaixa2{
-  top:10px;
-    right: auto;
-     position: relative;
-     
+  
+  background-color: cornsilk;
+  align-items: center;
+  padding: 5px;
+text-align: right;
  }
 
-               
-
-    
+  /*************************************/  
+          .suporte div{
+            padding-top: 20px;
+          }
+footer{
+  align-items: center;
+  padding-bottom: 20px;
+}
+ 
     
