--- a/backup-Trabalho/style.css
+++ b/backup-Trabalho/style.css
@@ -49,7 +49,7 @@
     margin-top: -24px;
 }
 
-#texto_promocao_config {
+.texto_promocao_config {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     position: absolute;
     margin-top: -240px;
@@ -72,7 +72,7 @@
 .dia {
     position: absolute;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 135px;
+    margin-left: 110px;
     margin-top: -130px;
     font-size: 60px;
     font-weight: bold;
