--- a/visualizacao/styles.css
+++ b/visualizacao/styles.css
@@ -180,7 +180,7 @@ justify-content: center;
     height: 100%;
     align-items: center;
   
-    }
+}
     
 
  .sect2 > .boxPromocao2 > .listaPromocao2{
@@ -237,5 +237,67 @@ footer{
 
 }
 
+/** Formatação menu e formulário **/
+
+.menu ul{
+  padding:30px;
+  margin:30px;
+  background-color:#FFE4E1;
+  list-style:none;
+}
+
+.menu ul li {
+   display: inline; 
+    
+}
+
+.menu ul li a {
+  padding: 2px 10px;
+  display: inline-block;
+
+  /* visual do link */
+  background-color:#EDEDED;
+  color: #333;
+  text-decoration: none;
+  border-bottom:3px solid #EDEDED;
+  border-radius: 30px;
+}
+
+.menu ul li a:hover {
+  background-color:#D6D6D6;
+  color: #6D6D6D;
+  border-bottom:3px solid #EA0000;
+}
+
+
+
+/**Estilos para os Formularios**/
+
+.formulario{
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  width:  500px;
+  background-color: #d028289a;
+  border-radius: 10px ;
+}
+
+.flex-item{
+  flex: 0.3px;
+}
+
+input{
+  border-radius: 10px;
+}
+
+.forms_inputs{
+  width: 400px;
+}
+
+label{
+  color: #D6D6D6;
+  font-weight: bold;
+  
+}
  
     
